feat: init docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,75 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Welcome to the Piguesse Project!"
+icon: "star"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## The Idea
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+Piguesse is a Project for the 4th Semester of Computer Science Study a HWR Berlin. The Idea is to create a Web Based Game that uses TensorflowJS to use a machine learning model in the browser. The purpose of the game is to explore the possibilities of machine learning in the browser and to create a fun game that uses this technology. The game was heavily inspired by "Quick, Draw!" from Google and used its dataset to train the model.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Development"
+    icon="brackets-curly"
+    href="./development"
   >
-    Get your docs set up locally for easy development
+    See how our development process was while creating the game
   </Card>
   <Card
-    title="Preview Changes"
+    title="How to play"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    Check out the user manual to learn how to play the game
   </Card>
 </CardGroup>
 
-## Make it yours
+## About the Docs
 
-Update your docs to your brand and add valuable content for the best user conversion.
+This documentation gives some insight into how Piguesso is being created and how the game works. It also gives some insight into the machine learning model and how it was trained. The documentation is created with Mintlify, a documentation tool that allows you to create beautiful and interactive documentation with ease. We will dicuss a couple of things along the way.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
+    title="The Design"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    href="./details/design"
   >
-    Customize your docs to your company's colors and brands
+    Learn about the key principles and components of the Piguesso design system
   </Card>
   <Card
-    title="Reference APIs"
+    title="Game State API"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="./api-refercence/introduction"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Learn how to use the Game State API to create interactive features
   </Card>
   <Card
-    title="Add Components"
+    title="The Architecture"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    href="./details/architecture"
   >
-    Build interactive features and designs to guide your users
+    Learn about the architecture of the Piguesso project
   </Card>
   <Card
-    title="Get Inspiration"
+    title="ML Model"
     icon="stars"
-    href="https://mintlify.com/customers"
+    href="./details/the-model"
   >
-    Check out our showcase of our favorite documentation
+    Check out how we trained a machine learning model to recognize drawings
+  </Card>
+  <Card
+    title="Tech Stack"
+    icon="layer-group"
+    href="./details/techstack"
+  >
+    Learn about the technologies used in the Piguesso project
+  </Card>
+  <Card
+    title="The Paper"
+    icon="leaf"
+    href="./paper/introduction"
+  >
+    Read about the paper we wrote about Software Engineering in the project
   </Card>
 </CardGroup>
